SVGImageCache isn't invalidated for <img> on dynamic page scale changes https://bugs.webkit.org/show_bug.cgi?id=89621 <rdar://problem/11714677>

Reviewed by Simon Fraser.

Previously, device and page scale factors were being cached as a part of the SVGImageCache's
size request. However, an <img> never has a reason to update its size request when the page
scale is changed via gesture zooming, as no layout occurs.

Instead, look up the relevant scales when the image is requested (which will occur during every
repaint), allowing page scale changes to take effect without requiring an updated size request.

Test: svg/as-image/image-respects-pageScaleFactor-change.html

* loader/cache/CachedImage.cpp:
(WebCore::CachedImage::lookupOrCreateImageForRenderer):
(WebCore::CachedImage::setContainerSizeForRenderer):
* svg/graphics/SVGImageCache.cpp:
(WebCore::SVGImageCache::lookupOrCreateBitmapImageForRenderer):
* svg/graphics/SVGImageCache.h:
(WebCore::SVGImageCache::SizeAndScales::SizeAndScales):
(SizeAndScales):

Add a test that ensures that dynamic changes to pageScaleFactor are propagated through
to the SVGImageCache.

* platform/mac/svg/as-image/image-respects-pageScaleFactor-change-expected.png: Added.
* platform/mac/svg/as-image/image-respects-pageScaleFactor-change-expected.txt: Added.
* svg/as-image/image-respects-pageScaleFactor-change.html: Added.


Canonical link: https://commits.webkit.org/107543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@120953 268f45cc-cd09-0410-ab3c-d52691b4dbfc